# razrabot_test_task

./: .build.sh  .gitignore  Makefile  pyproject.toml  setup_db.py
razrabot_todo_list/: app.py  db.py  validator.py
tests/: conftest.py  test_app.py
